--- a/css/phone.css
+++ b/css/phone.css
@@ -9,14 +9,23 @@
     padding-bottom: 8px;
 }
 /* Home section */
+#home::before{ 
+    content: "";
+    position: absolute;
+    background: url('../bg1.jpg') no-repeat center center/cover;
+    height: 740px;
+    top:0px;
+    left:0px;
+    width: 100%;
+    z-index: -1;
+    opacity:0.89;
+}
 #home{
     height: 370px; 
     padding: 3px 28px;
 }
 
-#home::before{
-    height: 480px; 
-}
+
 
 #home p{
     font-size: 13px;
