--- a/css/phone.css
+++ b/css/phone.css
@@ -1,6 +1,31 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    scroll-behavior: smooth;
+}
 /* Navigation */
 #navbar {
     flex-direction: column;
+    height: 85px;
+}
+#navbar ul{
+    /*display: flex;*/
+    font-family: 'Baloo Bhai', cursive;
+    margin-top: -80px;
+   
+}
+#navbar ul p{
+    font-size: 5px;
+    display: flex;
+    font-family: 'Baloo Bhai', cursive;
+}
+#logo img{
+    height: 59px;
+    margin: 3px 6px;
+    padding-right: 283px;
 }
 
 #navbar ul li a{
@@ -16,12 +41,12 @@
     height: 740px;
     top:0px;
     left:0px;
-    width: 100%;
+    width: 1304px;
     z-index: -1;
     opacity:0.89;
 }
 #home{
-    height: 370px; 
+    /*height: 370px; */
     padding: 3px 28px;
 }
 
