--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ html{
     height: 740px;
     top:0px;
     left:0px;
-    width: 100%;
+    width: 1300px;
     z-index: -1;
     opacity:0.89;
 }
