--- a/css/phone.css
+++ b/css/phone.css
@@ -1,7 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+
+ 
 
 html{
     scroll-behavior: smooth;
@@ -9,7 +7,7 @@ html{
 /* Navigation */
 #navbar {
     flex-direction: column;
-    height: 85px;
+   /* height: 85px;*/
 }
 #navbar ul{
     /*display: flex;*/
@@ -35,15 +33,7 @@ html{
 }
 /* Home section */
 #home::before{ 
-    content: "";
-    position: absolute;
-    background: url('../bg1.jpg') no-repeat center center/cover;
-    height: 740px;
-    top:0px;
-    left:0px;
-    width: 1304px;
-    z-index: -1;
-    opacity:0.89;
+    height: 750px;
 }
 #home{
     /*height: 370px; */
@@ -53,7 +43,7 @@ html{
 
 #home p{
     font-size: 13px;
-    margin-left: 304px;
+    /*margin-left: 304px;*/
 }
 
 /* Services section  */
