--- a/css/style.css
+++ b/css/style.css
@@ -90,14 +90,15 @@ html{
 #home::before{ 
     content: "";
     position: absolute;
-    background: url('../bg1.jpg') no-repeat center center/cover;
-    height: 740px;
-    top:0px;
-    left:0px;
-    width: 1300px;
+    background: url(../bg1.jpg) no-repeat center center/cover;
+    height: 702px;
+    top: 0px;
+    left: 0px;
+    width: 100%;
     z-index: -1;
-    opacity:0.89;
+    opacity: 0.89;
 }
+
 
 #home h1{
     color:#2f3038;;
