--- a/css/phone.css
+++ b/css/phone.css
@@ -1,5 +1,8 @@
-
- 
+@media only screen and (min-width: 15px){
+    body {
+        background-color: darkcyan;
+    }
+}
 
 html{
     scroll-behavior: smooth;
